v11/fixtures/ast/errors/alias_reexport_method_ambiguity/base.able
package alias_reexport_method_ambiguity_base

struct Widget { value: i32 }
